[package]
name = "servex"
version = "0.1.0"
edition = "2021"
description = "Macro to serve Modelx"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
corex = { version = "0.1.0", path = "../corex" }
modelx = { version = "0.1.0", path = "../modelx" }
handlerx = { version = "0.1.0", path = "../handlerx" }
proc-macro2 = "1.0.50"
quote = "1.0.23"
surrealdb = "1.0.0-beta.8"
syn = "1.0.107"
